--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
 body {
-  margin: 0;
+  background-color: #618D74;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  margin: 0;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  width: 100vw;
+}
+
+.container-login {
+  align-content: space-around;
+  align-items: center;
+  align-self: auto;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content:space-around;
+  
+}
+
+.left-login {
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+  align-self: auto;
+  width: 40%;
+}
+
+.left-login img {
+  width: 80%
+}
+
+.main-login {
+  align-items: center;
+  display: flex;
+  background-color: white;
+  border-radius: 10px;
+  flex-direction: column;
+  height: 50vh;
+  justify-content: center;
+  width: 50vw;
+}
+
+.right-login {
+  align-content: space-around;
+  align-items: center;
+  align-self: auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content:space-around;
+  width: 60%;
+}
+
+.right-login input {
+  border: 0 solid #FFFFFF;
+  border-bottom: 2px solid #000000;
+  height: 15%;
+  margin: 5px;
+  width: 80%;
+}
+
+.right-login button {
+  width: 40%;
+  height: 15%;
+  border-radius: 5px;
+  margin: 5px;
+  background-color: #3FBB69;
+}
+
